name = segscanner
version = 1.0.0
author = Aleksa Zatezalo
author_email = zabumaphu@gmail.com
description = A async and multi-threaded port scanner.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AleksaZatezalo/seg-scanner
project_urls
    Bug Tracker = https://github.com/AleksaZatezalo/seg-scanner/issues
classifiers = 
    Programming Language :: Python :: 3
    Lisence :: OSI Approved :: MIT Lisence
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    requests
    importlib-metadata; python_version<"3.8"